Link to Vimeo of INIFINITY

--- a/app/_news/3.md
+++ b/app/_news/3.md
@@ -10,6 +10,6 @@ In December 2016, Thomas appeared as Dr. Givings in Sarah Ruhl’s *In the Next 
 
 ![In the Next Room](/assets/images/news/in-the-next-room.jpg)
 
-Thomas starred in the short film *In a Room at the Edge of Infinity*, directed by Geoffrey Gunn. The film premiered November 4, 2016, as an official selection at the Reedy River Film Festival, where it won **Best Short Film**. It has been official selections at the [11th Annual Beaufort International Film Festival](http://www.beaufortfilmfestival.com/) and the [Cat Fly Film Festival](https://catflyfilmfest.com/) in Asheville, North Carolina.
+Thomas starred in the short film [*In a Room at the Edge of Infinity*](https://vimeo.com/240726345), directed by Geoffrey Gunn. The film premiered November 4, 2016, as an official selection at the Reedy River Film Festival, where it won **Best Short Film**. It has been official selections at the [11th Annual Beaufort International Film Festival](http://www.beaufortfilmfestival.com/) and the [Cat Fly Film Festival](https://catflyfilmfest.com/) in Asheville, North Carolina.
 
-<iframe style="max-width: 100%; height: auto;" src="https://player.vimeo.com/video/196021170" title="IN A ROOM AT THE EDGE OF INFINITY [Official Teaser]" webkitallowfullscreen="" mozallowfullscreen="" allowfullscreen="" width="800" height="450" frameborder="0"></iframe>
+[![In a Room at the Edge of Infinity](/assets/images/media/infinity.jpg)](https://vimeo.com/240726345)
