Mill Mountain news

--- a/app/_news/2.md
+++ b/app/_news/2.md
@@ -1,6 +1,10 @@
 ---
 title: What's Next
 ---
+Thomas appears as Roland in Nick Payne's *Constellations*, directed by Jay Briggs, playing February 22nd - March 11th, 2018, at [Mill Mountain Theatre](http://millmountain.org/production/constellations/) in Roanoke, Virginia.
+
+[![Mill Mountain Theatre](/assets/images/news/mill-mountain.png)](http://millmountain.org/production/constellations/)
+{:.mill-mountain}
 
 Thomas returns to the Warehouse Theatre as Benedick in *Much Ado About Nothing*, directed by Anne Kelly Tromsness, playing April 20th – May 5th, 2018. For tickets and more information, visit [warehousetheatre.com](https://warehousetheatre.com/much-ado-nothing/).
 
