--- a/app/_news/3.md
+++ b/app/_news/3.md
@@ -2,14 +2,15 @@
 title: Recently
 ---
 
-Thomas co-directed (with his wife, [Maegan McNerney Azar](https://www.maeganmcnerneyazar.com)) *Romeo & Juliet* at the Playhouse at Furman University. The production explored the classic text through the lens of war, occupation, and the seemingly unending cycle of violence.
+Thomas made his Alliance Theatre debut as Will in *Shakespeare in Love*, directed by Richard Garner.
 
-![Romeo & Juliet](/assets/images/news/romeo-and-juliet.jpg)
+“A dizzying achievement and a fortuitous moment for the Alliance […] Azar and Lind are lovely as Will and Viola.” — [Atlanta Journal-Constitution](http://www.myajc.com/entertainment/arts--theater/review-garner-delivers-delightful-shakespeare-love-for-alliance/7mE2EIDfjeatk5z8EyWCwN/)
 
-In December 2016, Thomas appeared as Dr. Givings in Sarah Ruhl’s *In the Next Room (or the Vibrator Play)*, directed by Kerrie Seymour at [the Warehouse Theatre](http://warehousetheatre.com/) in Greenville, South Carolina.
+“Will, extremely well played by Thomas Azar in his Alliance debut, is a living, loving, likable young man” —
+[Atlanta INtown Paper](http://atlantaintownpaper.com/2017/09/theatre-review-shakespeare-love-alliance/)
 
-![In the Next Room](/assets/images/news/in-the-next-room.jpg)
+“Both Thomas Azar as Will and Bethany Anne Lind as Viola are delightful, and the natural chemistry between the two creates an appealing sexiness that perfumes every scene.” — [Broadway World Atlanta](https://www.broadwayworld.com/atlanta/article/BWW-Review-SHAKESPEARE-IN-LOVE-at-Alliance-Theatre-20170915)
 
-Thomas starred in the short film [*In a Room at the Edge of Infinity*](https://vimeo.com/240726345), directed by Geoffrey Gunn. The film premiered November 4, 2016, as an official selection at the Reedy River Film Festival, where it won **Best Short Film**. It has been official selections at the [11th Annual Beaufort International Film Festival](http://www.beaufortfilmfestival.com/) and the [Cat Fly Film Festival](https://catflyfilmfest.com/) in Asheville, North Carolina.
+For more information, visit [alliancetheatre.org](http://alliancetheatre.org/production/shakespeare-love).
 
-[![In a Room at the Edge of Infinity](/assets/images/media/infinity.jpg)](https://vimeo.com/240726345)
+![Shakespeare in Love](/assets/images/news/shakespeare-in-love.jpg)
