--- a/app/_news/1.md
+++ b/app/_news/1.md
@@ -1,16 +1,10 @@
 ---
-title: Shakespeare in Love
+title: Now Playing
 ---
 
-Thomas made his Alliance Theatre debut as Will in *Shakespeare in Love*, directed by Richard Garner.
+Thomas appears as Roland in Nick Payne's *Constellations*, directed by Jay Briggs, playing February 22nd - March 11th, 2018, at [Mill Mountain Theatre](http://millmountain.org/production/constellations/) in Roanoke, Virginia.
 
-“A dizzying achievement and a fortuitous moment for the Alliance […] Azar and Lind are lovely as Will and Viola.” — [Atlanta Journal-Constitution](http://www.myajc.com/entertainment/arts--theater/review-garner-delivers-delightful-shakespeare-love-for-alliance/7mE2EIDfjeatk5z8EyWCwN/)
+&ldquo;[&hellip;] beautiful, thought provoking, funny, sweet and impressive theatre, you’ll love it. The talent of the two actors will blow you away. It’s simply beautiful.&rdquo; &ndash; Roanoke Weekly
 
-“Will, extremely well played by Thomas Azar in his Alliance debut, is a living, loving, likable young man” —
-[Atlanta INtown Paper](http://atlantaintownpaper.com/2017/09/theatre-review-shakespeare-love-alliance/)
-
-“Both Thomas Azar as Will and Bethany Anne Lind as Viola are delightful, and the natural chemistry between the two creates an appealing sexiness that perfumes every scene.” — [Broadway World Atlanta](https://www.broadwayworld.com/atlanta/article/BWW-Review-SHAKESPEARE-IN-LOVE-at-Alliance-Theatre-20170915)
-
-For more information, visit [alliancetheatre.org](http://alliancetheatre.org/production/shakespeare-love).
-
-![Shakespeare in Love](/assets/images/news/shakespeare-in-love.jpg)
+[![Mill Mountain Theatre](/assets/images/news/mill-mountain.png)](http://millmountain.org/production/constellations/)
+{:.mill-mountain}
