--- a/app/_news/2.md
+++ b/app/_news/2.md
@@ -1,7 +1,10 @@
 ---
-title: What's Next
+title: Constellations
 ---
 
-Thomas returns to the Warehouse Theatre as Benedick in *Much Ado About Nothing*, directed by Anne Kelly Tromsness, playing April 20th – May 5th, 2018. For tickets and more information, visit [warehousetheatre.com](https://warehousetheatre.com/much-ado-nothing/).
+Thomas appeared as Roland in Nick Payne's *Constellations*, directed by Jay Briggs, at [Mill Mountain Theatre](http://millmountain.org/production/constellations/) in Roanoke, Virginia.
 
-[![The Warehouse Theatre](/assets/images/news/warehouse-theatre.png)](https://warehousetheatre.com/much-ado-nothing/)
+&ldquo;[&hellip;] beautiful, thought provoking, funny, sweet and impressive theatre, you’ll love it. The talent of the two actors will blow you away. It’s simply beautiful.&rdquo; &ndash; Roanoke Weekly
+
+[![Mill Mountain Theatre](/assets/images/news/mill-mountain.png)](http://millmountain.org/production/constellations/)
+{:.mill-mountain}
