--- a/app/_news/1.md
+++ b/app/_news/1.md
@@ -1,10 +1,7 @@
 ---
-title: Now Playing
+title: What's Next
 ---
 
-Thomas appears as Roland in Nick Payne's *Constellations*, directed by Jay Briggs, playing February 22nd - March 11th, 2018, at [Mill Mountain Theatre](http://millmountain.org/production/constellations/) in Roanoke, Virginia.
+Thomas returns to the Warehouse Theatre as Benedick in *Much Ado About Nothing*, directed by Anne Kelly Tromsness, playing April 20th – May 5th, 2018. For tickets and more information, visit [warehousetheatre.com](https://warehousetheatre.com/much-ado-nothing/).
 
-&ldquo;[&hellip;] beautiful, thought provoking, funny, sweet and impressive theatre, you’ll love it. The talent of the two actors will blow you away. It’s simply beautiful.&rdquo; &ndash; Roanoke Weekly
-
-[![Mill Mountain Theatre](/assets/images/news/mill-mountain.png)](http://millmountain.org/production/constellations/)
-{:.mill-mountain}
+[![The Warehouse Theatre](/assets/images/news/warehouse-theatre.png)](https://warehousetheatre.com/much-ado-nothing/)
