--- a/app/_news/1.md
+++ b/app/_news/1.md
@@ -4,4 +4,4 @@ title: What's Next
 
 Thomas returns to the Warehouse Theatre as Benedick in *Much Ado About Nothing*, directed by Anne Kelly Tromsness, playing April 20th – May 5th, 2018. For tickets and more information, visit [warehousetheatre.com](https://warehousetheatre.com/much-ado-nothing/).
 
-[![The Warehouse Theatre](/assets/images/news/warehouse-theatre.png)](https://warehousetheatre.com/much-ado-nothing/)
+[![The Warehouse Theatre](/assets/images/news/much-ado.jpg)](https://warehousetheatre.com/much-ado-nothing/)
