--- a/app/_news/1.md
+++ b/app/_news/1.md
@@ -1,5 +1,5 @@
 ---
-title: What's Next
+title: Now Playing
 ---
 
 Thomas returns to the Warehouse Theatre as Benedick in *Much Ado About Nothing*, directed by Anne Kelly Tromsness, playing April 20th – May 5th, 2018. For tickets and more information, visit [warehousetheatre.com](https://warehousetheatre.com/much-ado-nothing/).
