Change titles of News items

--- a/app/_news/1.md
+++ b/app/_news/1.md
@@ -1,7 +1,13 @@
 ---
-title: Now Playing
+title: Much Ado About Nothing
 ---
 
-Thomas returns to the Warehouse Theatre as Benedick in *Much Ado About Nothing*, directed by Anne Kelly Tromsness, playing April 20th – May 5th, 2018. For tickets and more information, visit [warehousetheatre.com](https://warehousetheatre.com/much-ado-nothing/).
+Thomas returned to the [Warehouse Theatre](https://warehousetheatre.com/much-ado-nothing/) as Benedick in *Much Ado About Nothing*, directed by Anne Kelly Tromsness.
 
-[![The Warehouse Theatre](/assets/images/news/much-ado.jpg)](https://warehousetheatre.com/much-ado-nothing/)
+> "Azar brings confidence, class and wit to this role in the vein of screen legend Cary Grant"
+-- Carolina Curtain Call
+
+> "Azar is a gifted physical actor, [he] earns laughs with just a look."
+-- Broadway World South Carolina
+
+[![Promotional photo for Much Ado About Nothing](/assets/images/news/much-ado.jpg)](https://warehousetheatre.com/much-ado-nothing/)
