--- a/app/_news/2.md
+++ b/app/_news/2.md
@@ -4,7 +4,7 @@ title: Constellations
 
 Thomas appeared as Roland in Nick Payne's *Constellations*, directed by Jay Briggs, at [Mill Mountain Theatre](http://millmountain.org/production/constellations/) in Roanoke, Virginia.
 
-&ldquo;[&hellip;] beautiful, thought provoking, funny, sweet and impressive theatre, you’ll love it. The talent of the two actors will blow you away. It’s simply beautiful.&rdquo; &ndash; Roanoke Weekly
+> &ldquo;[&hellip;] beautiful, thought provoking, funny, sweet and impressive theatre, you’ll love it. The talent of the two actors will blow you away. It’s simply beautiful.&rdquo; &ndash; Roanoke Weekly
 
 [![Mill Mountain Theatre](/assets/images/news/mill-mountain.png)](http://millmountain.org/production/constellations/)
 {:.mill-mountain}
