Interview and upcoming shows

--- a/app/_news/1.md
+++ b/app/_news/1.md
@@ -1,13 +1,5 @@
 ---
-title: Much Ado About Nothing
+title: Greenville Journal interview
 ---
 
-Thomas returned to the [Warehouse Theatre](https://warehousetheatre.com/much-ado-nothing/) as Benedick in *Much Ado About Nothing*, directed by Anne Kelly Tromsness.
-
-> "Azar brings confidence, class and wit to this role in the vein of screen legend Cary Grant"
--- Carolina Curtain Call
-
-> "Azar is a gifted physical actor, [he] earns laughs with just a look."
--- Broadway World South Carolina
-
-[![Promotional photo for Much Ado About Nothing](/assets/images/news/much-ado.jpg)](https://warehousetheatre.com/much-ado-nothing/)
+An interview with Thomas ran in the July 27, 2018, issue of the *Greenville Journal*. [Read the full interview here](/2018/07/27/q-and-a/), and check out the [photos by Will Crooks](/media).
