--- a/app/_news/2.md
+++ b/app/_news/2.md
@@ -1,10 +1,9 @@
 ---
-title: Constellations
+title: Coming Up
 ---
 
-Thomas appeared as Roland in Nick Payne's *Constellations*, directed by Jay Briggs, at [Mill Mountain Theatre](http://millmountain.org/production/constellations/) in Roanoke, Virginia.
+Next spring, Thomas will appear at The Warehouse Theatre (twice!) and Lean Ensemble Theatre in Hilton Head:
 
-> &ldquo;[&hellip;] beautiful, thought provoking, funny, sweet and impressive theatre, you’ll love it. The talent of the two actors will blow you away. It’s simply beautiful.&rdquo; &ndash; Roanoke Weekly
-
-[![Mill Mountain Theatre](/assets/images/news/mill-mountain.png)](http://millmountain.org/production/constellations/)
-{:.mill-mountain}
+- as Tom in *The Glass Menagerie* at The Warehouse Theatre, directed by Kerrie Seymour
+- as Paul in *Barefoot in the Park* at Lean Ensemble Theatre, directed by Blake White
+- as Mr. Darcy in Kate Hamill's new adaptation of *Pride and Prejudice* at The Warehouse Theatre, directed by Jay Briggs
