--- a/app/_news/3.md
+++ b/app/_news/3.md
@@ -3,7 +3,19 @@ title: Shakespeare in Love
 full: true
 ---
 
-Thomas made his Alliance Theatre debut as Will in *Shakespeare in Love*, directed by Richard Garner.
+Thomas returned to the [Warehouse Theatre](https://warehousetheatre.com/much-ado-nothing/) as Benedick in *Much Ado About Nothing*, directed by Anne Kelly Tromsness.
+
+> "Azar brings confidence, class and wit to this role in the vein of screen legend Cary Grant"
+-- Carolina Curtain Call
+
+> "Azar is a gifted physical actor, [he] earns laughs with just a look."
+-- Broadway World South Carolina
+
+Thomas appeared as Roland in Nick Payne's *Constellations*, directed by Jay Briggs, at [Mill Mountain Theatre](http://millmountain.org/production/constellations/) in Roanoke, Virginia.
+
+> &ldquo;[&hellip;] beautiful, thought provoking, funny, sweet and impressive theatre, you’ll love it. The talent of the two actors will blow you away. It’s simply beautiful.&rdquo; &ndash; Roanoke Weekly
+
+Thomas made his [Alliance Theatre](http://alliancetheatre.org/production/shakespeare-love) debut as Will in *Shakespeare in Love*, directed by Richard Garner.
 
 > “A dizzying achievement and a fortuitous moment for the Alliance […] Azar and Lind are lovely as Will and Viola.” — [Atlanta Journal-Constitution](http://www.myajc.com/entertainment/arts--theater/review-garner-delivers-delightful-shakespeare-love-for-alliance/7mE2EIDfjeatk5z8EyWCwN/)
 
@@ -11,7 +23,3 @@ Thomas made his Alliance Theatre debut as Will in *Shakespeare in Love*, directe
 [Atlanta INtown Paper](http://atlantaintownpaper.com/2017/09/theatre-review-shakespeare-love-alliance/)
 
 > “Both Thomas Azar as Will and Bethany Anne Lind as Viola are delightful, and the natural chemistry between the two creates an appealing sexiness that perfumes every scene.” — [Broadway World Atlanta](https://www.broadwayworld.com/atlanta/article/BWW-Review-SHAKESPEARE-IN-LOVE-at-Alliance-Theatre-20170915)
-
-For more information, visit [alliancetheatre.org](http://alliancetheatre.org/production/shakespeare-love).
-
-![Shakespeare in Love](/assets/images/news/shakespeare-in-love.jpg)
