Update news on home page

--- a/content/news/3.md
+++ b/content/news/3.md
@@ -1,6 +1,6 @@
 ---
 title: Recently
-order: 4
+weight: 4
 ---
 
 Thomas returned to the [Warehouse Theatre](https://warehousetheatre.com/much-ado-nothing/) as Benedick in *Much Ado About Nothing*, directed by Anne Kelly Tromsness.
