Move featured images into front matter

--- a/content/writings/2018-07-27-q-and-a.md
+++ b/content/writings/2018-07-27-q-and-a.md
@@ -1,11 +1,12 @@
 ---
 title: Backstage Q&A with Thomas Azar
+featured_image:
+  file: "/uploads/greenville-journal.jpg"
+  alt: "Thomas Azar, photographed by Will Crooks"
+  caption: "Photo by Will Crooks for *The Greenville Journal*"
 ---
 
 *The following is the extended edit of the interview that appeared in the July 27, 2018, issue of the Greenville Journal.*<!--more-->
-
-![Thomas Azar](/uploads/greenville-journal.jpg)
-Photo by Will Crooks for *The Greenville Journal*
 
 ### A little about me
 
