--- a/content/writings/2018-07-27-q-and-a.md
+++ b/content/writings/2018-07-27-q-and-a.md
@@ -4,6 +4,7 @@ featured_image:
   file: "/uploads/greenville-journal.jpg"
   alt: "Thomas Azar, photographed by Will Crooks"
   caption: "Photo by Will Crooks for *The Greenville Journal*"
+draft: true
 ---
 
 *The following is the extended edit of the interview that appeared in the July 27, 2018, issue of the Greenville Journal.*<!--more-->
